monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0278/A0278c.mc4
/* (c) https://github.com/MontiCore/monticore */
package  de.monticore.grammar.cocos.invalid.A0278;

grammar A0278c extends de.monticore.grammar.cocos.invalid.A0278.A0278a{


    interface C extends A;

    X = A;

}
